POS Activity base layout

--- a/app/src/main/res/layout/configuration_item.xml
+++ b/app/src/main/res/layout/configuration_item.xml
@@ -10,5 +10,6 @@
             android:id="@+id/configuration"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             android:layout_weight="1"/>
 </LinearLayout>
