--- a/app/src/main/res/layout/activity_configuration_picker.xml
+++ b/app/src/main/res/layout/activity_configuration_picker.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ConfigurationPickerActivity">
+        tools:context=".views.ConfigurationPickerActivity">
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:layout_width="match_parent"
@@ -30,7 +30,8 @@
                         android:layout_marginTop="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" android:text="@string/pick_configuration"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:text="@string/pick_configuration"
                         android:textStyle="bold" android:gravity="center_horizontal" android:textSize="18sp"/>
 
                 <TextView
