--- a/app/src/main/res/layout/activity_order_summary.xml
+++ b/app/src/main/res/layout/activity_order_summary.xml
@@ -34,7 +34,7 @@
     <Button
             android:text="@string/close"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/order_summary_close"
+            android:layout_height="120dp" android:id="@+id/order_summary_close"
             android:layout_alignParentBottom="true"
     />
 </RelativeLayout>
