--- a/app/src/main/res/layout/activity_pos.xml
+++ b/app/src/main/res/layout/activity_pos.xml
@@ -61,12 +61,12 @@
                               android:layout_height="wrap_content"
                               android:layout_marginTop="10dp">
 
-                    <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
+                    <Button android:layout_width="0dp" android:layout_height="64sp" android:layout_weight="1"
                             android:text="Cash"
                             android:id="@+id/cart_pay_cash"
                     />
 
-                    <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
+                    <Button android:layout_width="0dp" android:layout_height="64sp" android:layout_weight="1"
                             android:text="Carte"
                             android:id="@+id/cart_pay_card"
                     />
