--- a/app/src/main/res/layout/cart_line.xml
+++ b/app/src/main/res/layout/cart_line.xml
@@ -6,8 +6,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp">
 
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:orientation="vertical"
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:orientation="horizontal"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
@@ -15,26 +15,30 @@
 
         <TextView
                 android:id="@+id/carted_item_name"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"/>
-
-        <TextView
-                android:id="@+id/carted_item_quantity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="viewEnd"
-                android:layout_marginTop="10dp"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-
-        <TextView
-                android:id="@+id/carted_item_price"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="viewEnd"
                 android:textSize="14sp"
-                android:textStyle="italic"/>
+                android:gravity="start"
+        />
 
-    </LinearLayout>
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="1dp" android:gravity="end">
+            <TextView
+                    android:id="@+id/carted_item_quantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="viewEnd"
+                    android:textSize="14sp"
+                    android:textStyle="bold"/>
+
+            <TextView
+                    android:id="@+id/carted_item_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="viewEnd"
+                    android:textSize="12sp"
+                    android:layout_marginStart="5sp"
+                    android:textStyle="italic"/>
+        </LinearLayout>
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
