--- a/app/src/main/res/layout/activity_cash_payment.xml
+++ b/app/src/main/res/layout/activity_cash_payment.xml
@@ -49,7 +49,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/change_to_return"
-                android:textStyle="bold" android:textSize="24sp"/>
+                android:textStyle="bold" android:textSize="50sp" android:textColor="@android:color/white" android:layout_marginTop="5sp"/>
 
     </LinearLayout>
     <LinearLayout
@@ -59,7 +59,7 @@
         <TextView
                 android:text="@string/cash_payment_title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:textSize="24sp" android:textStyle="bold"
+                android:layout_height="wrap_content" android:textSize="30sp" android:textColor="@android:color/white" android:textStyle="bold"
                 android:id="@+id/cash_payment_title"
                 android:layout_marginBottom="20sp"
         />
