--- a/app/src/main/res/layout/activity_cash_payment.xml
+++ b/app/src/main/res/layout/activity_cash_payment.xml
@@ -1,78 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center_horizontal"
-              android:orientation="horizontal"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              tools:context=".views.pos.CashPaymentActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="wrap_content"
+                                                   android:layout_height="wrap_content"
+                                                   android:gravity="center_horizontal"
+                                                   tools:context=".views.pos.CashPaymentActivity">
 
 
-    <LinearLayout
+    <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:longClickable="true"
-            android:layout_weight="1.6"
-            android:gravity="center"
-            android:layout_marginRight="5sp">
+            android:layout_height="wrap_content"
+            android:id="@+id/textInputLayout"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/btn_add_10"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="16dp"
+    >
+        <EditText
+                android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number"
+                android:ems="10" android:id="@+id/cash_given" android:hint="@string/given_money" />
 
-        <TextView
-                android:text="@string/change_help_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:textSize="24sp" android:textStyle="bold"/>
-        <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button android:layout_width="wrap_content" android:id="@+id/btn_add_200" android:layout_height="80dp"
+            android:text="200"
+
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintBottom_toTopOf="@id/change_to_return"
+            app:layout_constraintStart_toStartOf="@id/textInputLayout"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+    />
+    <Button android:layout_width="wrap_content" android:id="@+id/btn_add_100" android:layout_height="80dp"
+            android:text="100"
+
+            app:layout_constraintStart_toEndOf="@+id/btn_add_200"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintBottom_toTopOf="@id/change_to_return"
+
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+    />
+
+    <Button android:layout_width="wrap_content" android:id="@+id/btn_add_50" android:layout_height="80dp"
+            android:text="50"
+            tools:layout_editor_absoluteY="277dp"
+
+            app:layout_constraintStart_toEndOf="@+id/btn_add_100"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintBottom_toTopOf="@id/change_to_return"
+
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+    />
+
+    <Button android:layout_width="wrap_content" android:id="@+id/btn_add_20" android:layout_height="80dp"
+            android:text="20"
+            tools:layout_editor_absoluteY="277dp" app:layout_constraintStart_toEndOf="@+id/btn_add_50"
+
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintBottom_toTopOf="@id/change_to_return"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+    />
+
+    <Button android:layout_width="wrap_content" android:id="@+id/btn_add_10" android:layout_height="80dp"
+            android:text="10"
+            tools:layout_editor_absoluteY="277dp" app:layout_constraintStart_toEndOf="@+id/btn_add_20"
+
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintBottom_toTopOf="@id/change_to_return"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+    />
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/change_to_return"
+            android:textStyle="bold" android:textSize="45sp" android:textColor="@android:color/white"
+            android:text="Aide au retour"
+
+            android:textAlignment="center"
+            android:layout_marginBottom="8dp"
+
+            app:layout_constraintTop_toBottomOf="@+id/btn_add_200"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/btn_add_200"
+            app:layout_constraintEnd_toEndOf="@id/btn_add_10"
+    />
 
 
-            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
-                <Button android:layout_width="0sp" android:layout_weight="1" android:id="@+id/btn_add_200" android:layout_height="100sp" android:text="200" />
-                <Button android:layout_width="0sp" android:layout_weight="1" android:id="@+id/btn_add_100" android:layout_height="100sp" android:text="100" />
-                <Button android:layout_width="0sp" android:layout_weight="1" android:id="@+id/btn_add_50" android:layout_height="100sp" android:text="50" />
-                <Button android:layout_width="0sp" android:layout_weight="1" android:id="@+id/btn_add_20" android:layout_height="100sp" android:text="20" />
-                <Button android:layout_width="0sp" android:layout_weight="1" android:id="@+id/btn_add_10" android:layout_height="100sp" android:text="10" />
-            </LinearLayout>
+    <Button
+            android:text="@string/accept_cash_payment"
+            android:layout_width="170dp"
+            android:layout_height="0dp"
+            android:id="@+id/cash_payment_accept"
+            android:background="@android:color/holo_green_dark"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/cash_payment_abort"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/textInputLayout"
 
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:ems="10"
-                    android:id="@+id/cash_given" android:hint="@string/given_money"/>
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+    />
+    <Button
+            android:text="@string/refuse_cash_payment"
+            android:layout_width="170dp"
+            android:layout_height="0dp"
+            android:id="@+id/cash_payment_abort"
+            android:background="@android:color/holo_red_dark"
+            app:layout_constraintTop_toBottomOf="@+id/cash_payment_accept"
+            app:layout_constraintStart_toStartOf="@+id/cash_payment_accept"
+            app:layout_constraintEnd_toEndOf="@+id/cash_payment_accept"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+    />
 
-        </com.google.android.material.textfield.TextInputLayout>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/change_to_return"
-                android:textStyle="bold" android:textSize="50sp" android:textColor="@android:color/white" android:layout_marginTop="5sp"/>
-
-    </LinearLayout>
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_height="match_parent" android:layout_width="0dp" android:layout_weight="1"
-            android:gravity="center">
-        <TextView
-                android:text="@string/cash_payment_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:textSize="30sp" android:textColor="@android:color/white" android:textStyle="bold"
-                android:id="@+id/cash_payment_title"
-                android:layout_marginBottom="20sp"
-        />
-        <Button
-                android:text="@string/accept_cash_payment"
-                android:layout_width="match_parent"
-                android:layout_height="120dp" android:id="@+id/cash_payment_accept"
-                android:layout_marginBottom="10sp"
-                android:background="@android:color/holo_green_dark"/>
-        <Button
-                android:text="@string/refuse_cash_payment"
-                android:layout_width="match_parent"
-                android:layout_height="120dp" android:id="@+id/cash_payment_abort"
-                android:background="@android:color/holo_red_dark"/>
-    </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
