--- a/app/src/main/res/layout/activity_order_summary.xml
+++ b/app/src/main/res/layout/activity_order_summary.xml
@@ -1,40 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context=".views.pos.OrderSummaryActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              tools:context=".views.pos.OrderSummaryActivity"
+              android:layout_alignParentStart="true">
 
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:orientation="vertical"
-                  android:layout_alignParentStart="true">
-        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:text="La commande a été acceptée. Voici un rappel de son contenu :"
-                  android:id="@+id/accepted_order_text"
-                  android:layout_marginBottom="5sp"
-        />
 
-        <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/table"
-        android:stretchColumns="1"
-        >
-            <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-                      xmlns:tools="http://schemas.android.com/tools">
+    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+              android:text="La commande a été acceptée. Voici un rappel de son contenu :"
+              android:id="@+id/accepted_order_text"
+              android:layout_marginBottom="5sp"
+    />
 
-                <TextView android:text="Qté" android:textStyle="bold" android:layout_marginRight="5sp"/>
-                <TextView android:text="Produit" android:textStyle="bold"/>
-            </TableRow>
-        </TableLayout>
-    </LinearLayout>
+    <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/table"
+                 android:stretchColumns="1"
+    >
+        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:tools="http://schemas.android.com/tools">
 
+            <TextView android:text="Qté" android:textStyle="bold" android:layout_marginRight="5sp"/>
+            <TextView android:text="Produit" android:textStyle="bold"/>
+        </TableRow>
+    </TableLayout>
     <Button
             android:text="@string/close"
             android:layout_width="match_parent"
-            android:layout_height="120dp" android:id="@+id/order_summary_close"
-            android:layout_alignParentBottom="true"
+            android:layout_height="80dp" android:id="@+id/order_summary_close" android:textSize="24sp" android:layout_marginTop="12dp"
     />
-</RelativeLayout>
+</LinearLayout>
