--- a/app/src/main/res/layout/activity_configuration_picker.xml
+++ b/app/src/main/res/layout/activity_configuration_picker.xml
@@ -1,83 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".views.ConfigurationPickerActivity">
+        tools:context=".views.ConfigurationPickerActivity"
+        android:layout_height="wrap_content"
+        android:id="@+id/refresh_layout"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="85"
+            android:id="@+id/configuration_list">
 
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:layout_width="match_parent"
-                                                           android:layout_height="wrap_content"
-                                                           android:id="@+id/refresh_layout"
-                                                           android:layout_marginLeft="15dp"
-                                                           android:layout_marginRight="15dp">
-        <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="85"
-                android:id="@+id/configuration_list">
+        <LinearLayout
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="@string/pick_configuration"
+                    android:textStyle="bold" android:gravity="center_horizontal" android:textSize="18sp"/>
 
-            <LinearLayout
-                    android:layout_width="match_parent" android:layout_height="wrap_content"
-                    android:orientation="vertical">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textStyle="bold" android:gravity="center_horizontal" android:textSize="18sp"
+                    android:id="@+id/error_message"
+                    android:visibility="gone"/>
 
+            <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:id="@+id/recycler"
+                    android:layout_margin="8dp"/>
+
+            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                          android:orientation="horizontal">
                 <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:text="@string/pick_configuration"
-                        android:textStyle="bold" android:gravity="center_horizontal" android:textSize="18sp"/>
+                        android:layout_weight="1"
+                        android:text="@string/logged_in_to_ji"/>
 
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:textStyle="bold" android:gravity="center_horizontal" android:textSize="18sp"
-                        android:id="@+id/error_message"
-                        android:visibility="gone"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" android:id="@+id/recycler"
-                        android:layout_margin="8dp"/>
-
-                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
-                    <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="@string/logged_in_to_ji" />
-
-                    <Button android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/logout" android:id="@+id/ji_logout" />
+                <Button android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
+                        android:text="@string/logout" android:id="@+id/ji_logout"/>
 
 
-                </LinearLayout>
-
-                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
-                    <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="2"
-                            android:id="@+id/sumup_status"
-                        />
-
-                    <Button android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/logout" android:id="@+id/sumup_logout" />
-                    <Button android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/setup_sumup" android:id="@+id/sumup_setup" />
-
-
-                </LinearLayout>
             </LinearLayout>
-        </ScrollView>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                          android:orientation="horizontal">
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:id="@+id/sumup_status"
+                />
+
+                <Button android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
+                        android:text="@string/logout" android:id="@+id/sumup_logout"/>
+                <Button android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
+                        android:text="@string/setup_sumup" android:id="@+id/sumup_setup"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
